			Java Electric change log


************************* Version 8.01h: *********************************

FIX/IMP/MAN: (8/18/04, JKG) copy/paste fixes: default paste by center point, 
    can move anchor point, shows delta from copy to paste. Right click menu added when pasting.

IMP (8/18/04, GVG): Extra sizing rules for metals (another level) and area

************************* Version 8.01g: *********************************

FIX (8/17/04, RK) exportsConnectedByParent works on "implicit" expots created for global signals

IMP/MAN: (8/17/04, GVG) More rules for new technology. Important changes in DRC code so previous version was tagged as version-8-01g just in case

FIX (8/15/04, JKG) Closing a library now actually closes all Cells in library as well.

IMP/MAN (8/15/04, JKG) Added library palette to Components palette.

************************* Version 8.01f: *********************************

FIX: (8/13/04, JKG) Round doubles before truncating to int in ELIB writer, fixes
    instances moving because of doubles precision errors.

FIX: (8/13/04, JKG) Various fixes to Highlighter introduced in last version

IMP/MAN (8/13/04, JKG) Show networks now works hierarchically for layout (keep hitting ctrl-k)

IMP: (8/13/04, RK) "Better" NCC error reporting for Hash Code parition failures

IMP: (8/13/04, RK) NCC reports Part and Wire counts

IMP: (8/13/04, RK) NCC summarizes Export, topology, and size mismatches separately for each Cell and then for all Cells

IMP: (8/13/04, RK) NCC prints execution time per Cell and for the entire command

FIX: (8/13/04, RK) When NCCing hierarchically and continuing after errors, flatten subcircuits with Export name mismatches.

************************* Version 8.01e: *********************************

IMP/MAN: (8/12/04, JKG) Added preference in General Tab as to how Electric chooses the working dir.

IMP: (8/11/04, JKG) Highlighter now selects from a stack of objects based on last object selected. 
